[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/owl/owl.gd" type="Script" id=1]
[ext_resource path="res://objects/owl/textbox.svg" type="Texture" id=2]
[ext_resource path="res://objects/owl/owl.svg" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://objects/owl/roof-runners-active/PG_Roof Runners_active_it.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 438.457 )

[node name="owl" type="Node2D"]
position = Vector2( 6409.13, -184.271 )
script = ExtResource( 1 )

[node name="text_bg" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.792157 )
position = Vector2( 450.581, 270.363 )
texture = ExtResource( 2 )

[node name="text" type="Label" parent="."]
visible = false
margin_left = 342.893
margin_top = 239.828
margin_right = 612.893
margin_bottom = 352.828
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "
"
autowrap = true
clip_text = true

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 261.87, 279.271 )
scale = Vector2( 0.649166, 0.42005 )
z_index = -1
texture = ExtResource( 3 )

[node name="text_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 254.702, 101.543 )
shape = SubResource( 3 )
[connection signal="timeout" from="text_timer" to="." method="_on_text_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
